# style_transfer_app

./: .gitignore  .pydocstyle  .pylintrc  LICENSE  MANIFEST.in  Makefile  README.md  bot_interface.py  function.py  pyproject.toml  request_example.sh  requirements.txt  run_serever.sh  server.py  setup.cfg  utils.py
.github/workflows/: lint.yml  pydocstyle.yml
docs/: bot_interface.rst  conf.py  index.rst  modules.rst  server.rst  utils.rst
docs/_build/: .buildinfo
docs/_build/.doctrees/: bot_interface.doctree  environment.pickle  index.doctree  inference_test.doctree  modules.doctree  server.doctree  tests.doctree  utils.doctree
docs/source/: conf.py  index.rst
style_transfer_app/: __main__.py  bot_interface.py  server.py
tests/: __init__.py  test_utils.py
