[metadata]
name = style_transfer_app
version = 0.0.1

[options]
packages = style_transfer_app
install_requires =
    torch
    torchvision
    pydocstyle
    pylint
    sphinx
    requests
    Pillow ==8.4.0
    fastapi ==0.73.0
    uvicorn ==0.17.4
    pyTelegramBotAPI ==4.4.1

[options.package_data]
style_transfer_app = */*.pt
data = */*.pt
